--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ footer p {width: 100%; height:50%; font-family: "돋움"; font-size: 11px; color
   </header>
 
   <div id="slider">
-    <img src="0.jpg" alt="">
+    <img src="img/0.jpg" alt="">
   </div>
 
   <div id="brand">
