--- a/index.html
+++ b/index.html
@@ -10,62 +10,62 @@
     <link rel="stylesheet" href="css/style.css">
 
 </head>
-<link rel="stylesheet" href="/serve.html">
+
 <body>
   <header>
     <div id="ABOUTUS">
       <nav>
         <ul>
 
-          <li><a href="sub.html">ABOUT US</a></li>
-            <li><a href="sub.html">NEW</a>
+          <li><a href="serve.html">ABOUTUSv</a></li>
+            <li><a href="serve.html">NEW</a>
               <ul>
-                <li><a href="sub.html">big sale</a></li>
+                <li><a href="">big sale</a></li>
               </ul>
             </li>
-            <li><a href="sub.html">OUTER</a>
+            <li><a href="#">OUTER</a>
               <ul>
-                <li><a href="sub.html">Jacket</a></li>
-                <li><a href="sub.html">Coat</a></li>
-                <li><a href="sub.html">trench coat</a></li>
-                <li><a href="sub.html">Blazer</a></li>
-                <li><a href="sub.html">Cardigan</a></li>
+                <li><a href="serve.html">Jacket</a></li>
+                <li><a href="serve.html">Coat</a></li>
+                <li><a href="serve.html">trench coat</a></li>
+                <li><a href="serve.html">Blazer</a></li>
+                <li><a href="serve.html">Cardigan</a></li>
               </ul>
             </li>
-            <li><a href="sub.html">TOP</a>
+            <li><a href="serve.html">TOP</a>
               <ul>
-                <li><a href="sub.html">short T-shirt</a></li>
-                <li><a href="sub.html">long-T-shirt</a></li>
-                <li><a href="sub.html">Hoodie</a></li>
-                <li><a href="sub.html">man</a></li>
-                <li><a href="sub.html">Stripe</a></li>
+                <li><a href="serve.html">short T-shirt</a></li>
+                <li><a href="serve.html">long-T-shirt</a></li>
+                <li><a href="serve.html">Hoodie</a></li>
+                <li><a href="serve.html">man</a></li>
+                <li><a href="serve.html">Stripe</a></li>
               </ul>
             </li>
-            <li><a href="sub.html">PANTS</a>
+            <li><a href="serve.html">PANTS</a>
               <ul>
-                <li><a href="sub.html">Slacks</a></li>
-                <li><a href="sub.html">Jeans</a></li>
-                <li><a href="sub.html">Shorts</a></li>
-                <li><a href="sub.html">Training</a></li>
-                <li><a href="sub.html">cotton pants</a></li>
+                <li><a href="serve.html">Slacks</a></li>
+                <li><a href="serve.html">Jeans</a></li>
+                <li><a href="serve.html">Shorts</a></li>
+                <li><a href="serve.html">Training</a></li>
+                <li><a href="serve.html">cotton pants</a></li>
               </ul>
             </li>
-            <li><a href="sub.html">ACC</a>
+            <li><a href="serve.html">ACC</a>
               <ul>
-                <li><a href="sub.html">ring</a></li>
-                <li><a href="sub.html">Necklace</a></li>
-                <li><a href="sub.html">Clock</a></li>
+                <li><a href="serve.html">ring</a></li>
+                <li><a href="serve.html">Necklace</a></li>
+                <li><a href="serve.html">Clock</a></li>
               </ul>
             </li>
-            <li><a href="sub.html">LOOK BOOK</a>
+            <li><a href="serve.html">LOOK BOOK</a>
               <ul>
-                <li><a href="sub.html">2022 Spring Season</a></li>
-                <li><a href="sub.html">2022 Summer Season</a></li>
-                <li><a href="sub.html">2022 Autumn Season</a></li>
-                <li><a href="sub.html">2022 Winter Season</a></li>
+                <li><a href="serve.html">2022 Spring Season</a></li>
+                <li><a href="serve.html">2022 Summer Season</a></li>
+                <li><a href="serve.html">2022 Autumn Season</a></li>
+                <li><a href="serve.html">2022 Winter Season</a></li>
               </ul>
             </li>
-          <li><a href="sub.html">COMMUNITY</a></li>
+          <li><a href="serve.html">COMMUNITY</a></li>
             
         </ul>
       </nav>
@@ -82,29 +82,22 @@
       <h1>Brand Introduction</h1>
       <p id="y1">        Thom Browne is widely recognized for redefining modern tailoring.
         Through his collections for men, women and children, Browne conveys a true American sensibility.
-
-        "The idea of uniformity to me is interesting because I think it does show true individuality, and I think that
-        it shows true confidence."
-
+        "The idea of uniformity to me is interesting because I think it does show true individuality,
+        and I think that it shows true confidence."
         In 2003, Browne began his business with five grey suits in a made-to-measure shop in New York City’s 
         West Village.
 
-        each jacket and trouser, he paired a grey cardigan, a white oxford shirt, a grey tie and silver tie-bar, and
-        classic
-        black brogues.The jacket was sharply tailored with a high-armhole fit. The trouser was hemmed at the ankle.
-        This is the Thom Browne uniform.
+        each jacket and trouser, he paired a grey cardigan, a white oxford shirt, a grey tie
+        and silver tie-bar,and classic black brogues.The jacket was sharply tailored with a high-armhole fit. 
+        The trouser was hemmed at the ankle. This is the Thom Browne uniform.
 
-        The company has since expanded to include ready-to-wear, footwear, accessories, and a new fragrance.Browne is now
-        for his runway presentations and films, which have gained global attention for bringing viewers into his unique
-        world.
-
-        Each collection represents a new story of its own, taking traditional fabrics and reinterpreting them in a newway.
+        The company has since expanded to include ready-to-wear, footwear, accessories, and a new fragrance.Browne 
+        is now for his runway presentations and films, which have gained global attention for bringing viewers into his unique
+        world.Each collection represents a new story of its own, taking traditional fabrics and reinterpreting them in a newway.
 
         Now a global brand with over 50 stores, Thom Browne continues to challenge expectations with his approach to
-        design,
-        tailoring and presentation. His influence is evident through the culture-defining individuals who wear Thom
-        Browne. The
-        grey suit remains elemental to all he does, signifying a singular point-of-view and the commitment toexceptional
+        design,tailoring and presentation. His influence is evident through the culture-defining individuals who wear Thom
+        Browne. The grey suit remains elemental to all he does, signifying a singular point-of-view and the commitment toexceptional
         quality in fabrics and tailoring.
 
         Welcome to the world of Thom Browne.
