--- a/index.html
+++ b/index.html
@@ -16,57 +16,55 @@
     <div id="ABOUTUS">
       <nav>
         <ul>
+          <li><a href="serve.html">NEW</a>
+            <ul>
+              <li><a href="serve.html">big sale</a></li>
+            </ul>
+          </li>
+          <li><a href="serve.html">OUTER</a>
+            <ul>
+              <li><a href="serve.html">Jacket</a></li>
+              <li><a href="serve.html">Coat</a></li>
+              <li><a href="serve.html">trench coat</a></li>
+              <li><a href="serve.html">Blazer</a></li>
+              <li><a href="serve.html">Cardigan</a></li>
+            </ul>
+          </li>
+          <li><a href="serve.html">TOP</a>
+            <ul>
+              <li><a href="serve.html">short T-shirt</a></li>
+              <li><a href="serve.html">long-T-shirt</a></li>
+              <li><a href="serve.html">Hoodie</a></li>
+              <li><a href="serve.html">man</a></li>
+              <li><a href="serve.html">Stripe</a></li>
+            </ul>
+          </li>
+          <li><a href="serve.html">PANTS</a>
+            <ul>
+              <li><a href="serve.html">Slacks</a></li>
+              <li><a href="serve.html">Jeans</a></li>
+              <li><a href="serve.html">Shorts</a></li>
+              <li><a href="serve.html">Training</a></li>
+              <li><a href="serve.html">cotton pants</a></li>
+            </ul>
+          </li>
+          <li><a href="serve.html">ACC</a>
+            <ul>
+              <li><a href="serve.html">ring</a></li>
+              <li><a href="serve.html">Necklace</a></li>
+              <li><a href="serve.html">Clock</a></li>
+            </ul>
+          </li>
+          <li><a href="serve.html">LOOK BOOK</a>
+            <ul>
+              <li><a href="serve.html">2022 Spring Season</a></li>
+              <li><a href="serve.html">2022 Summer Season</a></li>
+              <li><a href="serve.html">2022 Autumn Season</a></li>
+              <li><a href="serve.html">2022 Winter Season</a></li>
+            </ul>
+          </li>
 
-          <li><a href="serve.html">ABOUTUSv</a></li>
-            <li><a href="serve.html">NEW</a>
-              <ul>
-                <li><a href="">big sale</a></li>
-              </ul>
-            </li>
-            <li><a href="#">OUTER</a>
-              <ul>
-                <li><a href="serve.html">Jacket</a></li>
-                <li><a href="serve.html">Coat</a></li>
-                <li><a href="serve.html">trench coat</a></li>
-                <li><a href="serve.html">Blazer</a></li>
-                <li><a href="serve.html">Cardigan</a></li>
-              </ul>
-            </li>
-            <li><a href="serve.html">TOP</a>
-              <ul>
-                <li><a href="serve.html">short T-shirt</a></li>
-                <li><a href="serve.html">long-T-shirt</a></li>
-                <li><a href="serve.html">Hoodie</a></li>
-                <li><a href="serve.html">man</a></li>
-                <li><a href="serve.html">Stripe</a></li>
-              </ul>
-            </li>
-            <li><a href="serve.html">PANTS</a>
-              <ul>
-                <li><a href="serve.html">Slacks</a></li>
-                <li><a href="serve.html">Jeans</a></li>
-                <li><a href="serve.html">Shorts</a></li>
-                <li><a href="serve.html">Training</a></li>
-                <li><a href="serve.html">cotton pants</a></li>
-              </ul>
-            </li>
-            <li><a href="serve.html">ACC</a>
-              <ul>
-                <li><a href="serve.html">ring</a></li>
-                <li><a href="serve.html">Necklace</a></li>
-                <li><a href="serve.html">Clock</a></li>
-              </ul>
-            </li>
-            <li><a href="serve.html">LOOK BOOK</a>
-              <ul>
-                <li><a href="serve.html">2022 Spring Season</a></li>
-                <li><a href="serve.html">2022 Summer Season</a></li>
-                <li><a href="serve.html">2022 Autumn Season</a></li>
-                <li><a href="serve.html">2022 Winter Season</a></li>
-              </ul>
-            </li>
-          <li><a href="serve.html">COMMUNITY</a></li>
-            
+
         </ul>
       </nav>
     </div>
