--- a/serve.html
+++ b/serve.html
@@ -27,19 +27,19 @@
     <nav>
         <ul>
             <div id="menu"></div>
-            <a href="#">WORLD</a>
-            <a href="#">MEN</a>
-            <a href="#">WOMEN</a>
-            <a href="#">CHILDREN</a>
-            <a href="#">EYEWEAR</a>
-            <a href="#">FRAGRANCE</a>
-            <a href="#"><img src="img/a1.jpg"></a>
-            <a href="#">GIDTS</a>
-            <a href="#">STORES</a>
-            <a href="#">ABOUT</a>
-            <a href="#">SHIP TO US</a>
-            <a href="#">LOG IN</a>
-            <a href="#"></a>
+            <a href="index.html">WORLD</a>
+            <a href="index.html">MEN</a>
+            <a href="index.html">WOMEN</a>
+            <a href="index.html">CHILDREN</a>
+            <a href="index.html">EYEWEAR</a>
+            <a href="index.html">FRAGRANCE</a>
+            <a href="index.html"><img src="img/a1.jpg"></a>
+            <a href="index.html">GIDTS</a>
+            <a href="index.html">STORES</a>
+            <a href="index.html">ABOUT</a>
+            <a href="index.html">SHIP TO US</a>
+            <a href="index.html">LOG IN</a>
+            <a href="index.html"></a>
         </ul>
     </nav>
     <!-- ------------------------------------- -->
